--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 *{
   font-family: poppins;
 }
+.container{
+    padding-left: 3%;
+    padding-right: 5% ;
+}
+.btn{
+  background-color: #3B3030;
+  color: #F7F7F7;
+  padding: 14px 20px;
+  font-size: 16px;
+  border-radius: 25px;
+  outline: 0;
+  cursor: pointer;
+  border: 0;
+}
