--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,20 +1,33 @@
 .hero{
-        width: 100%;
-        min-height: 100vh;
-        background: linear-gradient(rgba(210, 206, 163, 0.4),rgba(190, 210, 163,0.4)), url('../../assets/hero.jpeg');
-        background-size: cover;
-        background-position: center ;
-        color: #fff ;
-        display: flex;
-        align-items: center;
-        justify-content: center;    
-        
+    width: 100%;
+    min-height: 100vh;
+    background: linear-gradient(rgba(171, 202, 131, 0.3),rgba(8,0,58,0.5)), url('../../assets/hero.jpeg');
+    background-size: 100%;
+    background-position: center ;
+    color: #fff ;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+    overflow: hidden;      
+    box-sizing: border-box;
+    background-repeat: no-repeat;
 
 }
 .hero-text{
    text-align: center;
    max-width: 1000px;
-  
+   padding-top: 7%;
+}
+.hero-text h1{
+    font-size: 40px;
+    color: #F5F5F5;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 
+
+}
+.hero-text p{
+    font-size: 20px;
+    color: #E0F7FA;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
 
 }
