--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -21,12 +21,13 @@
 .hero-text h1{
     font-size: 40px;
     color: #F5F5F5;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+    margin-bottom: 15px;
 
 
 }
 .hero-text p{
-    font-size: 20px;
+    font-size: 16px;
     color: #E0F7FA;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
 
