--- a/src/components/Programs/Programs.css
+++ b/src/components/Programs/Programs.css
@@ -1,16 +1,38 @@
-.programs{
-    margin:80px auto;
-    width: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.programs {
+  margin: 80px auto;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.program img{
-    width: 100%;
-    border-radius: 10px ;
-    display: block;
+.program img {
+  width: 100%;
+  border-radius: 10px;
+  display: block;
+}
 
+.program {
+  flex-basis: 31%;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 10px;
+  overflow: hidden;
 }
-.program{
-    flex-basis: 31%;
+
+.program .info{
+    display: block;
+    position: relative;
+    padding: 8px 12px;
+   
 }
+.program .info h3,
+.program .info p {
+  text-align: center; 
+}
+
+.program:hover, 
+.program:focus-within {
+    transform: translateY(-70px);
+    transition: 0.4s ease all;
+}
+
