--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,6 +16,10 @@ nav{
     width: 120px;
 
 }
+nav h1{
+    font-size: 23px;
+    
+}
 
 a{
     text-decoration: none;
@@ -26,14 +30,71 @@ a{
 .Tablist{
     margin-left: 0;
 }
+nav ul{
+    
+  padding-left: 0px;
+
+}
+.logo-and-title{
+    display: inline-flex;
+    align-items: center;
+    
+}
 nav ul li{
     display: inline-block;
     list-style: none;
     margin: 5px 10px;
     font-size: 18px;
+    font-weight: bold;
 }
 .light-nav{
         background: #f7f7f7;
         transition: 0.5s;
         border-radius: 20px; 
+}
+
+/* --------media  query-------- */
+@media (max-width: 1206px) {
+    
+    nav ul li{
+        font-size: 18px;
+        margin: 2px 7px;
+    }
+    
+}
+@media (max-width: 1200px){
+    .logo{
+        width: 110px;
+    }
+    nav h1{
+        font-size: 20px;
+    }
+}
+@media (max-width: 1162px) {
+    .logo{
+        width: 100px;
+    }
+    nav ul li{
+        font-size: 16px;
+        margin: 2px 5px;
+    }
+    nav h1{
+        font-size: 19px;
+    }
+    
+    
+}
+@media (max-width: 1046px) {
+    .logo{
+        width: 90px;
+    }
+    nav ul li{
+        font-size: 14px;
+        margin: 2px 3px;
+    }
+}
+@media (max-width: 930px) {
+    nav{
+        padding: 15px 0;
+    }
 }
