--- a/src/components/Programs/Programs.css
+++ b/src/components/Programs/Programs.css
@@ -36,3 +36,17 @@
     transition: 0.4s ease all;
 }
 
+/* --------media  query-------- */
+@media (max-width:650px) {
+    
+    .programs{
+        flex-direction: column;
+    }
+    
+    .program{
+        flex-basis: 100%;
+        margin :20px;
+    }
+    
+    
+}
