--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,3 +13,13 @@
     margin-left: 20px;
     
 }
+/* --------media  query-------- */
+@media (max-width: 600px) {
+        .footer{
+            display: block;
+            text-align: center;
+        }
+        .footer ul li{
+            margin-top: 10px;
+        }
+}
