--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -14,3 +14,14 @@
     width: 250px;
     height: 250px;
 }
+/* --------media  query-------- */
+@media (max-width: 800px) {
+    .gallery{
+       flex-wrap: wrap;
+    }
+    .gallery img{
+        width: 48%;
+        margin-bottom: 25px;
+    
+}
+}
