--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -52,7 +52,10 @@ nav ul li{
         transition: 0.5s;
         border-radius: 20px; 
 }
+.menu-icon{
+    display: none;
 
+}
 /* --------media  query-------- */
 @media (max-width: 1206px) {
     
@@ -96,5 +99,30 @@ nav ul li{
 @media (max-width: 930px) {
     nav{
         padding: 15px 0;
+    }
+    nav ul {
+        position: fixed;
+        top: 0;
+        right:-200px;
+        bottom: 0;
+        background:#dae1d2;
+        z-index: -1;
+        width: 200px;
+        padding-top: 70px;
+        transition: 0.5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px 40px;
+
+    }
+    .menu-icon{
+        display: block;
+        cursor: pointer;
+        width: 30px;
+    }
+    .hide-mobile-menu{
+        right:0 ;
+        border-radius: 20px;
     }
 }
