--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -57,7 +57,7 @@ nav ul li{
 
 }
 /* --------media  query-------- */
-@media (max-width: 1206px) {
+@media (max-width: 1220px) {
     
     nav ul li{
         font-size: 18px;
@@ -103,13 +103,14 @@ nav ul li{
     nav ul {
         position: fixed;
         top: 0;
-        right:-200px;
+        right:0px;
         bottom: 0;
         background:#dae1d2;
         z-index: -1;
         width: 200px;
         padding-top: 70px;
         transition: 0.5s;
+        border-radius: 20px;
     }
     nav ul li{
         display: block;
@@ -122,7 +123,7 @@ nav ul li{
         width: 30px;
     }
     .hide-mobile-menu{
-        right:0 ;
+        right: -200px; 
         border-radius: 20px;
     }
 }
